
ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = feedhunter dvb2pcap rotor
feedhunter_SOURCES = feedhunter.c frontend.c frontend.h lnb.c lnb.h scan.c scan.h utils.c utils.h

dvb2pcap_SOURCES = dvb2pcap.c frontend.c frontend.h lnb.c lnb.h scan.c scan.h utils.c utils.h
dvb2pcap_LDADD = -lpcap

rotor_SOURCES = rotor.c
